# makepad_wechat

./: Cargo.toml  README.md  android.sh
src/: api.rs  app.rs  contacts.rs  lib.rs  main.rs
src/contacts/: add_contact_screen.rs  contact_info.rs  contacts_group.rs  contacts_list.rs  contacts_screen.rs  header.rs  mod.rs  new_contact.rs
src/discover/: discover_screen.rs  mod.rs  moment_list.rs  moments_screen.rs
src/home/: chat_entry.rs  chat_list.rs  chat_screen.rs  chats.rs  home_screen.rs  mod.rs
src/profile/: mod.rs  my_profile_screen.rs  profile_screen.rs
src/shared/: clickable_frame.rs  clickable_view.rs  dropdown_menu.rs  header.rs  helpers.rs  mod.rs  popup_menu.rs  search_bar.rs  stack_navigation.rs  stack_view_action.rs  styles.rs  text_input.rs
