[package]
name = "makepad_wechat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
makepad-platform = { path = "../../platform", version = "0.3.0" }
makepad-widgets = { path = "../../widgets", version = "0.3.0" }