[package]
name = "makepad_wechat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# makepad-widgets = { path = "../makepad/widgets", version = "0.6.0" }
makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }

[profile.small]
inherits = "release"
#debug = true
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true
